--- a/demo/index.html
+++ b/demo/index.html
@@ -37,14 +37,14 @@
         <div class="form-group">
           <label for="mode">Mode</label>
           <select class="form-control" id="mode" name="mode">
-            <option value="TEXT">TEXT</option>
             <option value="HTML">HTML</option>
+            <option value="TEXT">TEXT</option>
           </select>
         </div>
         <div class="form-group">
           <label for="prompt">Scraping Prompt</label>
           <textarea class="form-control" id="prompt" rows="3" required>
-Extract all RSS titles</textarea
+Extract all RSS feed urls with titles</textarea
           >
         </div>
         <button type="submit" class="btn btn-primary" id="submit-button">
